# ceph-mcp

./: LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: claude_desktop_config.json
src/ceph_mcp/: __main__.py  commands.py  config.py  k8s_exec.py  server.py
src/ceph_mcp/parsers/: __init__.py  health.py  mon.py  osd.py  pg.py  pool.py  rgw_sync.py
tests/: conftest.py  test_commands.py  test_config.py  test_k8s_exec.py
tests/fixtures/: df_detail.json  df_detail_pool_near_full.json  health_detail_err.json  health_detail_warn.json  osd_df.json  osd_tree.json  pg_stat_clean.json  pg_stat_degraded.json  quorum_status_degraded.json  quorum_status_healthy.json  rgw_sync_status_behind.txt  rgw_sync_status_caught_up.txt  rgw_sync_status_error.txt  rgw_sync_status_no_multisite.txt
tests/test_parsers/: test_health.py  test_mon.py  test_osd.py  test_pg.py  test_pool.py  test_rgw_sync.py
