[project]
name = "ceph-mcp"
version = "0.1.0"
description = "a mcp server for ceph cluster"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
 "kubernetes>=36.0.3",
 "mcp>=1.28.1",
]
[[project.authors]]
name = "Serkan"
email = "info@serkannamli.com"

[build-system]
requires = [ "uv_build>=0.11.28,<0.12.0",]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "ruff>=0.15.21",
]

[project.scripts]
ceph-mcp = "ceph_mcp:main"
